lab1/Test/L1-A-12-67.cmm
struct yLD35QNYPJO ;
struct ldyozIzS {
  int Vcyy30LR7 , Imct = E ;
}ge ( @float H ) {
  if ( HcycpzrT )   if ( XdY5viwtAsnRtiw )   return 
    Q30SuhZVIiMebBzBH4 ;
else   Emi7L8ad6LO9aqF1NmC ;

else   if ( GUq )   while ( WtDH7X || gqDuqfSSTMqjABvxBdgh 
    && Qwy >= T4p0TDMH + n * - ! O ( ozmCj55XiRuti = T2N1LbKo58ctjAb60cdg 
    == nBebfgEgj9zx - bCj5sRnRqUa0 / ! el [ tZ0eQRWkCre8bJAOZ 
    && RMdX > FsQ + ( UAgt - r * IUi3YTs [ H6hFHWNUlkAKVlU24X3 
    = fjFbsg3fBvWvAcg = HvBR6hrWeYZ && ( DLKIvKt = S || 
    mHRjq9QZA_mUP && ( zo > iTk + ! CXZhEsW [ kPkmTLwtrDE_1SC8 
    = oQdDmNShnLBpNhwb ! ( Kw_PZ = x5UYE || ( MfGRWY5GMS01 
    = C || ytaYgJNuQWbW != ( x_poieiNLi11AoCDH && ( mzmq 
    = LSTogwjtl9Fc3I || ( LQWUFT3lJ2d == L7YejANVPoLYq554yJ 
    - NCwmAA9rxCku27CZ9uTO * - ( Gd03BGB90TOkrFFpvZ0V 
    && hj0LLcMqrx1N + ! - ! - - ( LpE_FIl || Sfmd * - 
    QrV6ETPRd0gzK9 [ zkR = l >= ! ! z [ - wr [ B91f = 
    PYMHpOyWijVSuaND && O7X - Zhq7aHpS1L5xhfFgZF [ wiapohbw 
    + ( ( KtmGYNeo >= KwV96kK8b * ( TZl_L3 [ p - K [ qTUp2scbqCUsODy5cbSa 
    [ qMQX8B < ymLG5nlvslBHNuQGr + ( AGLqh3aQbhjB3x = 
    fse >= RuqBiJDLIXFRRS * ( WA = kHIPgzMQUf7J [ q2QS7 
    = oUS ( Wt7nZI2Z , ExR5DeRr ) - KNHLb ] ) . leOUmt_4UrOMqlYT 
    ) ] ] - tti8_0DFhdVo09UUR ] ) [ BHSNSTCEwVm7r . lLIfU3fAFj_ 
    . u_Hi1MwJ7u18OA5k ] / qOdWso4 . bYyKzpZzrylwA || 
    ! XastfuxmppnzO9PpLt ) + o . Vr / kd02PUOY1fwHcUSRB 
    ) * ! ! vRCCCFZKWfNJB [ rqqf_yCsJII1Yi * ezyMoVBJBMeHw 
    ] ] == byZkMDjs ] + grdP2fel ] ] ) || - QYR348fhUDHnYy0lmEsG 
    ) / yHyt6IAkf9XFf ) ) == M * qDoJfnb1bgtCF8V4dQ * 
    T5DrsgQXykWEI5 ) ) ) != lHO80TjrJbsqBs / ! CflB22dRC9M 
    ] < - ! CzwbsA72upJL4ddH ) ) / PtVzfS8gOXfC == VkeK_lJcbAYPsd8I7WxA 
    ] != ! biXDQa . Jjbz0Q2VD7N2sIdv ) + 904625710.433191172 
    <= 1098012490 . aev0wQaPkFA68Es74gB . jOWs1EQykkGId 
    . z ] [ ! sqmf ( ) ] < zbxS ) . xW6zZU4F5vzS2g6h ) 
    {
    struct Rg5ctGd_G SsiqN1W8 ;
  }


}
int SKTay [ 308442594 ] , aD1hzukUj0 

;
int ;
struct {
  int I_VIwlgMycc2lX ;
};
int ;
struct YKHULs_cr3 lAXV1dtKCC0 
;
int PB_jIutVYLmNkV 
;
int ;
int bn0FaEpBxps ( ) {
}
int Ce ( int QkLiUrlPobDn4uvLrch , int qR6UGfb9l4 
  ) ^{
}
int ;
